Squashed commit of the following:
Since last update:

    josh/editor * Add name selection on create new stage
    josh/editor * Fix a problem with stage selection in the graph
    Fix a bug causing initial graph state to not always render
    josh/editor * Clean up some console logs
    josh/editor * Add placeholders when no stage selected
    josh/editor * More cleanup on the placeholders
    josh/editor * Add some listeners for events from step list
    Flow annotations
    josh/editor * Rejig the types for steps slightly
    josh/editor * Add step
    josh/editor * Select newly added step
    josh/editor * Edit step details, plus a bunch of visual tweaks
    Missing a semicolon

Older (since master):

    josh/editor * Replace nodeclick event with sensible stage selection event
    josh/editor * Switch EditorPipelineGraph to paremetised Component<>, fix flow errors
    josh/editor * Select newly-created stages in the editor, and fix 'selectedStage' prop functionality on editor graph
    josh/editor * Add parallel branch to existing child-free stage
    josh/editor * Simpler-case add working for parallel branch
    Update parent pom version like in upstream
    josh/editor * Add new modules to root pom
    josh/editor * Diagnose and fix issues in the eslint config causing broken build from mvn
    Prune old backup gulpfile
    josh/editor * Storybook working, and also less processing
    josh/editor * More progress towards at least compiling on command line, and now Flow passes after references to JDL classes removed
    josh/editor * More support stuff
    josh/editor * Initial commit of copied files from abandoned JDL branch into new folder in BO (not working)

--- a/pom.xml
+++ b/pom.xml
@@ -101,6 +101,7 @@
     <module>blueocean-rest</module>
     <module>blueocean-rest-impl</module>
     <module>blueocean-pipeline-api-impl</module>
+    <module>blueocean-pipeline-editor</module>
     <module>blueocean-events</module>
     <module>blueocean-dashboard</module>
     <module>blueocean-personalization</module>
